k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threatlens-app
  namespace: apps-prod
spec:
  selector:
    app: threatlens-app
  ports:
  - name: api
    port: 80
    targetPort: 8000
