k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threatlens-app
  namespace: apps-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: threat-lens.vpjoshi.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: threatlens-app
                port:
                  number: 80
